tests/ui/endpoint-recv-only-payload-cannot-send.stderr
error[E0277]: the trait bound `RecvOnly: WireEncode` is not satisfied
  --> tests/ui/endpoint-recv-only-payload-cannot-send.rs:26:34
   |
26 |     let future = endpoint.send::<g::Msg<36, RecvOnly>>(&payload);
   |                                  ^^^^^^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `WireEncode` is not implemented for `RecvOnly`
  --> tests/ui/endpoint-recv-only-payload-cannot-send.rs:6:1
   |
 6 | struct RecvOnly;
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `WireEncode`:
             &[u8]
             ()
             [u8; N]
             bool
             i128
             i16
             i32
             i64
           and $N others
note: required by a bound in `hibana::endpoint::ops::<impl Endpoint<'r, ROLE>>::send`
  --> src/endpoint/ops.rs
   |
   |     pub fn send<'a, 'e, M>(
   |            ---- required by a bound in this associated function
...
   |         M::Payload: WireEncode + 'a,
   |                     ^^^^^^^^^^ required by this bound in `hibana::endpoint::ops::<impl Endpoint<'r, ROLE>>::send`

error[E0277]: the trait bound `RecvOnly: WireEncode` is not satisfied
  --> tests/ui/endpoint-recv-only-payload-cannot-send.rs:27:5
   |
27 |     core::mem::drop(future);
   |     ^^^^^^^^^^^^^^^ unsatisfied trait bound
   |
help: the trait `WireEncode` is not implemented for `RecvOnly`
  --> tests/ui/endpoint-recv-only-payload-cannot-send.rs:6:1
   |
 6 | struct RecvOnly;
   | ^^^^^^^^^^^^^^^
   = help: the following other types implement trait `WireEncode`:
             &[u8]
             ()
             [u8; N]
             bool
             i128
             i16
             i32
             i64
           and $N others
note: required by a bound in `hibana::endpoint::ops::<impl Endpoint<'r, ROLE>>::send`
  --> src/endpoint/ops.rs
   |
   |     pub fn send<'a, 'e, M>(
   |            ---- required by a bound in this associated function
...
   |         M::Payload: WireEncode + 'a,
   |                     ^^^^^^^^^^ required by this bound in `hibana::endpoint::ops::<impl Endpoint<'r, ROLE>>::send`
